2002-11-25  David Carlton  <carlton@math.stanford.edu>

	* dwarf2read.c (scan_partial_symbols): Descend into namespace
	pdi's with no name.

2002-11-21  Daniel Jacobowitz  <drow@mvista.com>

	* maint.c (_initialize_maint_cmds): Fix typo.  From
	Francesco Potorti` <pot@gnu.org>.

2002-11-19  Andrew Cagney  <ac131313@redhat.com>

	Problems reported by Paul Eggert.
	* gdbarch.sh: Use `sort -k 3`.

2002-11-19  Andrew Cagney  <ac131313@redhat.com>

	From mainline:
	2002-11-12  Andrew Cagney  <ac131313@redhat.com>
	* utils.c (gdb_realpath): Make rp a constant pointer.
	
2002-11-13  Pierre Muller  <muller@ics.u-strasbg.fr>

	Import from mainline:

	* p-exp.y (name_not_typename): Use copy_name to
	set current_type variable for fields of THIS.

2002-11-12  Andrew Cagney  <ac131313@redhat.com>

	* utils.c (gdb_realpath): Rewrite.  Try, in order: realpath() with
	a constant buffer; cannonicalize_file_name(); realpath() with a
	pathconf() defined buffer, xstrdup().

2002-11-12  Andrew Cagney  <ac131313@redhat.com>

	* config/djgpp/fnchange.lst: Fix typo, hang1.c to hang1.C; hang2.c
	to hang2.C; hang3.c to hang3.C.

2002-11-08  Andrew Cagney  <ac131313@redhat.com>

	* Makefile.in (DESTDIR): Define.
	(install-only, install-gdbtk, uninstall-gdbtk): Add $(DESTDIR)
	prefix.

	* config/djgpp/fnchange.lst: 8.3 proof i386obsd-nat.c and
	i386obsd-tdep.c.  Rename to "gdb.cxx", paths containing "gdb.c++".

2002-11-06  Joel Brobecker  <brobecker@gnat.com>

	* PROBLEMS: Document gdb/816 (unable to read core file on alpha-osf).

2002-11-06  Theodore A. Roth  <troth@openavr.org>

	* c-exp.y: Add missing semi-colons.
	* f-exp.y: Add missing semi-colons.
	* m2-exp.y: Add missing semi-colons.
	* p-exp.y: Add missing semi-colons.
	Add empty action to start rule to avoid a type clash error when
	building with bison >= 1.50.

2002-10-31  Joel Brobecker  <brobecker@gnat.com>

	* hppa-tdep.c (low_text_segment_addres): Fix a compilation warning.

2002-10-25  Mark Kettenis  <kettenis@gnu.org>
