@@ -25,6 +25,7 @@
 #include "inferior.h"
 #include "regcache.h"
 #include "value.h"
+#include "gdb_string.h"
 
 #include "ppc-tdep.h"
 
