@@ -27,6 +27,7 @@
 #include "srec.h"
 #include "arch-utils.h"
 #include "regcache.h"
+#include "gdb_string.h"
 
 #include "sh-tdep.h"
 
